--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
   display: flex;
   gap: 0.5rem;
   overflow-x: auto;
+  white-space: nowrap;
   scroll-behavior: smooth;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none;  /* IE/Edge */
