--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@ const iconBox = `
 //*Scrolling Tab Filters Bar */  
 <script>
   const filterWrapper = document.getElementById('typeFilters');
-  let isDown = false, startX;
+/*  let isDown = false, startX;
 
   // Drag-to-scroll (mouse)
   filterWrapper.addEventListener('mousedown', e => {
@@ -634,7 +634,7 @@ const iconBox = `
     filterWrapper.scrollLeft -= walk;
     startX = x;
   });
-
+*/
   // Touch scroll (mobile)
 /*  filterWrapper.addEventListener('touchmove', e => {
     filterWrapper.scrollLeft -= e.touches[0].clientX - (filterWrapper._lastTouchX || e.touches[0].clientX);
