--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ body.landing-active {
     
    <section id="placeSection" class="snap-section"> 
   
-  <img id="logo" src="WebAppLogo.png" alt="WebApp Logo">
+  <img id="logo" src="WebAppLogo.webp" alt="WebApp Logo">
     
  <div id="searchBarRow">  
     <input id="placeSearch" type="text" placeholder="Search places..." />
