--- a/index.html
+++ b/index.html
@@ -419,10 +419,12 @@ body.landing-active {
   </div>
 
   <div id="placeCard" style="display:none;"></div>
-</body>
 
+  
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3098807263908139"
-     crossorigin="anonymous"></script>x
+     crossorigin="anonymous"></script> 
+  
+</body>
 
 
 /*Place Script*/
