--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-adsense-account" content="ca-pub-3098807263908139">
   <title> 🧭 Places & Events - It's Happening Now</title>
-  
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3098807263908139"
+     crossorigin="anonymous"></script> 
   
   <style>
     body {
