--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@ document.addEventListener('DOMContentLoaded', function() {
   pointer-events: none;
 }
 </style>
-  <img id="logo" src="WebAppLogo.webp" alt="WebApp Logo" style="position:relative;z-index:1;">
+  <img id="logo" src="WebAppLogo2.png" alt="WebApp Logo" style="position:relative;z-index:1;">
   
   <div id="searchBarRow" style="position:relative;z-index:2;">  
     <input id="placeSearch" type="text" placeholder=" Search places..." />
